support opens/uses